--- a/vacancies.html
+++ b/vacancies.html
@@ -7,6 +7,7 @@
     <title>SalaryHunter | Vacancies</title>
     <script src="./Scripts/nav.js"></script>
     <link rel="stylesheet" href="Stylesheets/global-styles.css">
+    <link rel="stylesheet" href="Stylesheets/stylesheet-vacancies.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,6 +37,32 @@
             </div>
         </div>
     </nav>
+    <header>
+        <div id="header-container">
+            <h1>Vacancies</h1>
+            <p>
+                Find your perfect job using Salary Hunters vacancies portal, simply browse through open vacancies or simply search the job title you are looking for!
+            </p>
+            <form>
+                <input id="vacancies-search-box" type="text" placeholder="Software Engineer">
+                <input id="vacancies-submit-button" type="submit" value="Search">
+            </form>
+        </div>
+    </header>
+    <main>
+        <section>
+            <!-- <div id="filters">
+                <img src="./Assets/images/Vacancies/filter-icon.png" width="25px" alt="">
+            </div> -->
+            <div id="vacancies-list">
+                <div id="vacancies-card">
+                    <h3>Software Engineer</h3>
+                    <!-- <img src="./Assets/images/Vacancies/down-arrow.svg" width="25px" alt=""> -->
+                     <button>Show more</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
