add dynamic vacancies card

--- a/takehome.html
+++ b/takehome.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalaryHunter | Pay Calculator</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/images/favicon.ico">
     <script src="./Scripts/nav.js"></script>
     <link rel="stylesheet" href="Stylesheets/global-styles.css">
     <link rel="stylesheet" href="Stylesheets/stylesheet-takehome.css">
