--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalaryHunter | Home</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/images/favicon.ico">
     <script src="./Scripts/nav.js"></script>
     <link rel="stylesheet" href="Stylesheets/stylesheet-home.css">
     <link rel="stylesheet" href="Stylesheets/global-styles.css">
@@ -26,7 +27,7 @@
                 </div>
             </li>
         </ul>
-        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="10%" alt="">
+        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="10% alt="">
         <div id="side-nav">
             <div id="side-nav-top">
                 <h1 id="side-nav-heading"><a href="/index.html">SH</a></h1>
