--- a/vacancies.html
+++ b/vacancies.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalaryHunter | Vacancies</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/images/favicon.ico">
     <script src="./Scripts/nav.js"></script>
     <link rel="stylesheet" href="Stylesheets/global-styles.css">
     <link rel="stylesheet" href="Stylesheets/stylesheet-vacancies.css">
@@ -55,14 +56,12 @@
                 <img src="./Assets/images/Vacancies/filter-icon.png" width="25px" alt="">
             </div> -->
             <div id="vacancies-list">
-                <div id="vacancies-card">
-                    <h3>Software Engineer</h3>
-                    <!-- <img src="./Assets/images/Vacancies/down-arrow.svg" width="25px" alt=""> -->
-                     <button>Show more</button>
-                </div>
             </div>
         </section>
     </main>
+    <footer>
+        <p>Designed & Created by Michael Surgeon ©2025</p>
+    </footer>
 </body>
-
+<script src="./Scripts/vacancies.js"></script>
 </html>
