--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalaryHunter | Home</title>
     <link rel="icon" type="image/x-icon" href="./Assets/images/favicon.ico">
-    <script src="./Scripts/nav.js"></script>
+    <script defer src="./Scripts/nav.js"></script>
     <link rel="stylesheet" href="Stylesheets/stylesheet-home.css">
     <link rel="stylesheet" href="Stylesheets/global-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
