Clean up & Small fixes

--- a/takehome.html
+++ b/takehome.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+
     <nav>
         <ul>
             <li>
@@ -39,6 +41,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Header -->
+
     <header>
         <div id="header-container">
             <div id="header-container-content">
@@ -50,10 +55,16 @@
             </div>
         </div>
     </header>
+
+    <!-- Main Content -->
+
     <main>
+        <!-- History -->
         <div id="history-container">
             <button id="takehome-clear-history">Clear History</button>
         </div>
+
+        <!-- Results Container -->
         <section id="calculator-results">
             <div class="section-card">
                 <h1>Calculator Input</h1>
@@ -118,6 +129,9 @@
             </div>
         </section>
     </main>
+
+    <!-- footer -->
+     
     <footer>
         <p>Designed & Created by Michael Surgeon ©2025</p>
     </footer>
