--- a/vacancies.html
+++ b/vacancies.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+
+    <!-- Filters modal pop up -->
+
     <div id="filters-overlay">
         <div id="filters-pop-up">
             <form id="filters-pop-up-form">
@@ -31,6 +34,9 @@
             </form>
         </div>
     </div>
+
+    <!-- Nav -->
+
     <nav>
         <ul>
             <li>
@@ -52,6 +58,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Header -->
+
     <header>
         <div id="header-container">
             <h1>Vacancies</h1>
@@ -62,8 +71,12 @@
                 <input id="vacancies-search-box" required type="text" placeholder="Software Engineer">
                 <input id="vacancies-submit-button" type="submit" value="Search">
             </form>
+            <p id="filter-warning">(If a location filter is applied the search works on the existing data)</p>
         </div>
     </header>
+
+    <!-- Main Content -->
+
     <main>
         <section>
             <div id="filter-modal">
@@ -86,6 +99,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
+
     <footer>
         <p>Designed & Created by Michael Surgeon ©2025</p>
     </footer>
