--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+
+    <!-- Navigation -->
+
     <nav>
         <ul>
             <li>
@@ -39,6 +42,9 @@
             </div>
         </div>
     </nav>
+
+    <!-- Header -->
+
     <header>
         <div id="header-content-container">
             <h2>Looking for the <span id="header-hero-title">perfect job?</span></h2>
@@ -49,6 +55,9 @@
         </div>
     </header>
     <div id="section-break-1"></div>
+
+    <!-- Main Content -->
+
     <main>
         <section id="section-1">
             <div id="section-1-container">
@@ -84,6 +93,9 @@
             </div>
         </section>
     </main>
+
+    <!-- footer -->
+
     <footer>
         <p>Designed & Created by Michael Surgeon ©2025</p>
     </footer>
