Add direct link from pay calc to vacancies

--- a/takehome.html
+++ b/takehome.html
@@ -95,7 +95,7 @@
                 <h1>Recent Result</h1>
                 <div id="recent-result">
                     <div id="recent-result-content">
-                        <h2 id="recent-result-job-title">Software Engineer</h2>
+                        <a id="recent-result-job-title-link"><h2 id="recent-result-job-title">Software Engineer</h2></a>
                         <p id="recent-result-text">Working 35 hours a week for a gross pay of £4000 per Month with 20% Tax and 12% NI results in a take-home pay of</p>
                         <h3>Yearly</h3>
                         <p>£<span id="recent-result-yearly">12,000</span></p>
@@ -113,7 +113,7 @@
                 <div id="recent-result">
                     <img id="history-left-arrow" src="./Assets/images/Takehome/history-arrow-left.svg" width="35PX" alt="">
                     <div id="recent-result-content-center"">
-                        <h2 id="history-job-title">Software Engineer</h2>
+                        <a id="history-job-title-link"><h2 id="history-job-title">Software Engineer</h2></a>
                         <p id="history-text">Working 35 hours a week for a gross pay of £4000 per Month with 20% Tax and 12% NI results in a take-home pay of</p>
                         <h3>Yearly</h3>
                         <p>£<span id="history-yearly">12,000</span></p>
