update for html & css validators

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <nav>
         <ul>
             <li>
-                <h1><a href="/index.html">Salary Hunter</a></h1>
-                <div>
-                    <a href="/takehome.html"><button id="nav-button">Pay Calculator</button></a>
-                    <a href="/vacancies.html"><button id="nav-button">Vacancies</button></a>
+                <h2><a href="/index.html">Salary Hunter</a></h2>
+                <div id="nav-buttons">
+                    <a href="/takehome.html" class="nav-button">Pay Calculator</a>
+                    <a href="/vacancies.html" class="nav-button">Vacancies</a>
                 </div>
             </li>
         </ul>
-        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="10% alt="">
+        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="50" alt="hamburger-menu">
         <div id="side-nav">
             <div id="side-nav-top">
-                <h1 id="side-nav-heading"><a href="/index.html">SH</a></h1>
-                <img src="./Assets/images/close-icon.svg" onclick="closeSideNav()" width="25px" alt="">
+                <h2 id="side-nav-heading"><a href="/index.html">SH</a></h2>
+                <img src="./Assets/images/close-icon.svg" onclick="closeSideNav()" width="25" alt="close-icon">
             </div>
             <div id="side-nav-content">
                 <h3><a href="takehome.html">Pay Calculator</a></h3>
@@ -51,7 +51,7 @@
             <h3>We provide you with a way to look for vacancies along with providing you a take home pay calculator.
             </h3>
             <h3>Learn more</h3>
-            <a href="#section-1"><img src="./Assets/images/down-arrow-svgrepo-com.svg" width="25px" height="25px"></a>
+            <a href="#section-1"><img src="./Assets/images/down-arrow-svgrepo-com.svg" width="25" height="25" alt="down-arrow"></a>
         </div>
     </header>
     <div id="section-break-1"></div>
@@ -62,7 +62,7 @@
         <section id="section-1">
             <div id="section-1-container">
                 <div id="section-1-left">
-                    <img src="./Assets/images/male-sect-1.png" />
+                    <img src="./Assets/images/male-sect-1.png" alt="image-of-male">
                 </div>
                 <div id="section-1-right">
                     <div id="section-1-right-content">
@@ -74,7 +74,7 @@
                             anything that tickles your
                             fancy. Salary hunter has your back!
                         </p>
-                        <a href="/vacancies.html"><button class="section-button">Take me to Vacancies</button></a>
+                        <a href="/vacancies.html" class="section-button">Take me to Vacancies</a>
                     </div>
                 </div>
             </div>
@@ -83,13 +83,13 @@
         <section id="section-2">
             <div id="section-2-card">
                 <h1>Take Home Pay Calculator</h1>
-                <img src="./Assets/images/calculator.png">
+                <img src="./Assets/images/calculator.png" alt="picture-of-calculator">
                 <p>Tired of not understanding your paycheck? Do you want to know an exact breakdown of your pay slip? We
                     offer an easy to use take home pay calculator, simply put pop in your tax & national insurance
                     percentage and get
                     an easy to understand break down!
                 </p>
-                <a href="/takehome.html"><button class="section-button">Take me to the calculator</button></a>
+                <a href="/takehome.html" class="section-button">Take me to calculator</a>
             </div>
         </section>
     </main>
