--- a/vacancies.html
+++ b/vacancies.html
@@ -24,7 +24,7 @@
     <div id="filters-overlay">
         <div id="filters-pop-up">
             <form id="filters-pop-up-form">
-                <img id="filters-pop-up-close" src="./Assets/images/close-icon.svg" width="20px" alt="">
+                <img id="filters-pop-up-close" src="./Assets/images/close-icon.svg" width="20" alt="close-icon">
                 <h3>Filters</h3>
                 <label>Location</label>
                 <select id="filters-location" name="location">
@@ -40,17 +40,17 @@
     <nav>
         <ul>
             <li>
-                <h1><a href="/index.html">Salary Hunter</a></h1>
-                <div>
-                    <a href="/takehome.html"><button id="nav-button">Pay Calculator</button></a>
+                <h2><a href="/index.html">Salary Hunter</a></h2>
+                <div id="nav-buttons">
+                    <a href="/takehome.html" class="nav-button">Pay Calculator</a>
                 </div>
             </li>
         </ul>
-        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="10%" alt="">
+        <img src="./Assets/images/hamburger-menu.png" onclick="openSideNav()" width="50" alt="hamburger-menu">
         <div id="side-nav">
             <div id="side-nav-top">
-                <h1 id="side-nav-heading"><a href="/index.html">SH</a></h1>
-                <img src="./Assets/images/close-icon.svg" onclick="closeSideNav()" width="25px" alt="">
+                <h2 id="side-nav-heading"><a href="/index.html">SH</a></h2>
+                <img src="./Assets/images/close-icon.svg" onclick="closeSideNav()" width="25" alt="close-icon">
             </div>
             <div id="side-nav-content">
                 <h3><a href="takehome.html">Pay Calculator</a></h3>
@@ -80,13 +80,13 @@
     <main>
         <section>
             <div id="filter-modal">
-                <img id="filter-button" src="./Assets/images/Vacancies/filter-icon.png" width="25px" alt="filter icon">
+                <img id="filter-button" src="./Assets/images/Vacancies/filter-icon.png" width="25" alt="filter-icon">
             </div>
             <div id="filters">
             </div>
             <div id="vacancies-list">
-                <img id="vacancies-spinner" src="./Assets/Gifs/loading-spinner.gif" width="100px" alt="">
-                <h1 id="no-vacancies">No vacancies found</h1>
+                <img id="vacancies-spinner" src="./Assets/Gifs/loading-spinner.gif" width="100" alt="loading-spinner">
+                <h2 id="no-vacancies">No vacancies found</h2>
                 <div id="vacancies-cards"> </div>
             </div>
             <div id="vacancies-pagination">
